samples/_failures_safe/1761130645_8b94e5_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_da98485d.c: In function ‘main’:
./samples/SAFE/__tmp_da98485d.c:197:24: error: ‘MAX_TOK’ undeclared (first use in this function); did you mean ‘MAX_TOKENS’?
  197 |     if (token_count >= MAX_TOK
      |                        ^~~~~~~
      |                        MAX_TOKENS
./samples/SAFE/__tmp_da98485d.c:197:24: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_da98485d.c:197:31: error: expected ‘)’ at end of input
  197 |     if (token_count >= MAX_TOK
      |        ~                      ^
      |                               )
./samples/SAFE/__tmp_da98485d.c:197:5: error: expected declaration or statement at end of input
  197 |     if (token_count >= MAX_TOK
      |     ^~
